[gd_scene load_steps=5 format=3 uid="uid://d33nfyk6l0sn7"]

[ext_resource type="Script" uid="uid://xjb7jlwvtuc3" path="res://scripts/ui/DebugMetricsDisplay.gd" id="1_tc4bw"]
[ext_resource type="Script" uid="uid://we3y4ug41ivm" path="res://scripts/ui/DebugMenu.gd" id="2_ij3wc"]
[ext_resource type="FontFile" uid="uid://cur8nvqxih1gl" path="res://assets/fonts/jet_brains_mono/JetBrainsMono-Regular.ttf" id="3_jtkf4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xpsq0"]
bg_color = Color(0, 0, 0, 0.25098)

[node name="DebugDisplay" type="CanvasLayer"]

[node name="MetricsDisplay" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -416.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = 408.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_tc4bw")

[node name="VBoxContainer" type="VBoxContainer" parent="MetricsDisplay"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 374.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="FPS" type="Label" parent="MetricsDisplay/VBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 18
text = "60 FPS"
horizontal_alignment = 2

[node name="FrameTime" type="Label" parent="MetricsDisplay/VBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "16.67 mspf (cap: 123 FPS + Adaptive V-Sync)"
horizontal_alignment = 2

[node name="FrameNumber" type="Label" parent="MetricsDisplay/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Frame: 1234"
horizontal_alignment = 2

[node name="FrameTimeHistory" type="GridContainer" parent="MetricsDisplay/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 5

[node name="Spacer" type="Control" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
mouse_filter = 2

[node name="AvgHeader" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Average"
horizontal_alignment = 2

[node name="MinHeader" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Best"
horizontal_alignment = 2

[node name="MaxHeader" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Worst"
horizontal_alignment = 2

[node name="LastHeader" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Last"
horizontal_alignment = 2

[node name="TotalHeader" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Total:"
horizontal_alignment = 2

[node name="TotalAvg" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="TotalMin" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="TotalMax" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="TotalLast" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="CPUHeader" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "CPU:"
horizontal_alignment = 2

[node name="CPUAvg" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="CPUMin" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "12.34"
horizontal_alignment = 2

[node name="CPUMax" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="CPULast" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="GPUHeader" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "GPU:"
horizontal_alignment = 2

[node name="GPUAvg" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="GPUMin" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "1.23"
horizontal_alignment = 2

[node name="GPUMax" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="GPULast" type="Label" parent="MetricsDisplay/VBoxContainer/FrameTimeHistory"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "123.45"
horizontal_alignment = 2

[node name="FPSGraph" type="HBoxContainer" parent="MetricsDisplay/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="Title" type="Label" parent="MetricsDisplay/VBoxContainer/FPSGraph"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "FPS: ↑"
vertical_alignment = 1

[node name="Graph" type="Panel" parent="MetricsDisplay/VBoxContainer/FPSGraph"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xpsq0")

[node name="TotalGraph" type="HBoxContainer" parent="MetricsDisplay/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="Title" type="Label" parent="MetricsDisplay/VBoxContainer/TotalGraph"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Total: ↓"
vertical_alignment = 1

[node name="Graph" type="Panel" parent="MetricsDisplay/VBoxContainer/TotalGraph"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xpsq0")

[node name="CPUGraph" type="HBoxContainer" parent="MetricsDisplay/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="Title" type="Label" parent="MetricsDisplay/VBoxContainer/CPUGraph"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "CPU: ↓"
vertical_alignment = 1

[node name="Graph" type="Panel" parent="MetricsDisplay/VBoxContainer/CPUGraph"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xpsq0")

[node name="GPUGraph" type="HBoxContainer" parent="MetricsDisplay/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="Title" type="Label" parent="MetricsDisplay/VBoxContainer/GPUGraph"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "GPU: ↓"
vertical_alignment = 1

[node name="Graph" type="Panel" parent="MetricsDisplay/VBoxContainer/GPUGraph"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xpsq0")

[node name="Information" type="Label" parent="MetricsDisplay/VBoxContainer"]
modulate = Color(1, 1, 1, 0.752941)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "12th Gen Intel(R) Core(TM) i0-1234K
Windows 12 64-bit (double precision), Vulkan 1.2.34
NVIDIA GeForce RTX 1234, 123.45.67"
horizontal_alignment = 2

[node name="Settings" type="Label" parent="MetricsDisplay/VBoxContainer"]
modulate = Color(0.8, 0.84, 1, 0.752941)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "Project Version: 1.2.3
Rendering Method: Forward+
Window: 1234×567, Viewport: 1234×567
3D Scale (FSR 1.0): 100% = 1234×567
3D Antialiasing: TAA + 2× MSAA + FXAA
SSR: 123 Steps
SSAO: On
SSIL: On
SDFGI: 1 Cascades
Glow: On
Volumetric Fog: On
2D Antialiasing: 2× MSAA"
horizontal_alignment = 2

[node name="Menu" type="Window" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Debug Options"
initial_position = 1
size = Vector2i(600, 400)
script = ExtResource("2_ij3wc")

[node name="TabContainer" type="TabContainer" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1

[node name="Log" type="ScrollContainer" parent="Menu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Column" type="VBoxContainer" parent="Menu/TabContainer/Log"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Log" type="PanelContainer" parent="Menu/TabContainer/Log/Column"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogContent" type="RichTextLabel" parent="Menu/TabContainer/Log/Column/Log"]
layout_mode = 2
focus_mode = 2
theme_override_constants/line_separation = 6
theme_override_constants/paragraph_separation = 6
theme_override_fonts/normal_font = ExtResource("3_jtkf4")
theme_override_fonts/bold_font = ExtResource("3_jtkf4")
theme_override_fonts/bold_italics_font = ExtResource("3_jtkf4")
theme_override_fonts/italics_font = ExtResource("3_jtkf4")
theme_override_fonts/mono_font = ExtResource("3_jtkf4")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="ActionsRow" type="HBoxContainer" parent="Menu/TabContainer/Log/Column"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Menu/TabContainer/Log/Column/ActionsRow"]
layout_mode = 2
text = "Filters"

[node name="FilterLog" type="Button" parent="Menu/TabContainer/Log/Column/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "LOG"

[node name="FilterInfo" type="Button" parent="Menu/TabContainer/Log/Column/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "INFO"

[node name="FilterWarning" type="Button" parent="Menu/TabContainer/Log/Column/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "WARNING"

[node name="FilterError" type="Button" parent="Menu/TabContainer/Log/Column/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "ERROR"

[node name="FilterTrace" type="Button" parent="Menu/TabContainer/Log/Column/ActionsRow"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "TRACE"

[node name="Spacer" type="Control" parent="Menu/TabContainer/Log/Column/ActionsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearLog" type="Button" parent="Menu/TabContainer/Log/Column/ActionsRow"]
layout_mode = 2
text = "Clear"

[node name="General" type="ScrollContainer" parent="Menu/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Column" type="VBoxContainer" parent="Menu/TabContainer/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MetricsControl" type="HBoxContainer" parent="Menu/TabContainer/General/Column"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/TabContainer/General/Column/MetricsControl"]
layout_mode = 2
text = "Display performance Metrics"

[node name="MetricsVisibility" type="OptionButton" parent="Menu/TabContainer/General/Column/MetricsControl"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Hidden"
popup/item_0/id = 0
popup/item_1/text = "Compact"
popup/item_1/id = 1
popup/item_2/text = "Detailed"
popup/item_2/id = 2
popup/item_3/text = "Max"
popup/item_3/id = 3

[node name="SceneLoader" type="HBoxContainer" parent="Menu/TabContainer/General/Column"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/TabContainer/General/Column/SceneLoader"]
layout_mode = 2
text = "Scene Loader"

[node name="Scene" type="OptionButton" parent="Menu/TabContainer/General/Column/SceneLoader"]
layout_mode = 2

[node name="Load" type="Button" parent="Menu/TabContainer/General/Column/SceneLoader"]
layout_mode = 2
text = "Load"
